[project]
name = "chat-terminal"
version = "0.1.0"
description = "lightweighted but necessary terminal chatbot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "grandalf>=0.8",
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "lxml>=6.0.2",
    "pyppeteer>=2.0.0",
    "rich>=14.2.0",
]
